// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 1`] = `
<FileAudio16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 2`] = `
<FileBookmark16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 3`] = `
<FileBoxNote16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 4`] = `
<FileCode16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 5`] = `
<FileDefault16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 6`] = `
<FileText16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 7`] = `
<FileDwg16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 8`] = `
<FileExcel16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 9`] = `
<FolderShared16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 10`] = `
<FolderExternal16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 11`] = `
<FolderPersonal16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 12`] = `
<FileDocs16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 13`] = `
<FileSheets16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 14`] = `
<FileSlides16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 15`] = `
<FileIllustrator16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 16`] = `
<FileImage16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 17`] = `
<FileIndesign16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 18`] = `
<FileKeynote16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 19`] = `
<FileNumbers16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 20`] = `
<FilePages16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 21`] = `
<FilePdf16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 22`] = `
<FilePhotoshop16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 23`] = `
<FilePowerpoint16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 24`] = `
<FilePresentation16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 25`] = `
<FileSpreadsheet16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 26`] = `
<FileText16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 27`] = `
<FileThreeD16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 28`] = `
<FolderPersonal16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 29`] = `
<FileVector16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 30`] = `
<FileVideo16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 31`] = `
<FileWord16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 32`] = `
<FileZip16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render component with additional props 33`] = `
<FileDefault16
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 1`] = `
<FileAudio16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 2`] = `
<FileBookmark16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 3`] = `
<FileBoxNote16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 4`] = `
<FileCode16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 5`] = `
<FileDefault16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 6`] = `
<FileText16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 7`] = `
<FileDwg16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 8`] = `
<FileExcel16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 9`] = `
<FolderShared16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 10`] = `
<FolderExternal16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 11`] = `
<FolderPersonal16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 12`] = `
<FileDocs16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 13`] = `
<FileSheets16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 14`] = `
<FileSlides16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 15`] = `
<FileIllustrator16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 16`] = `
<FileImage16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 17`] = `
<FileIndesign16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 18`] = `
<FileKeynote16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 19`] = `
<FileNumbers16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 20`] = `
<FilePages16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 21`] = `
<FilePdf16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 22`] = `
<FilePhotoshop16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 23`] = `
<FilePowerpoint16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 24`] = `
<FilePresentation16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 25`] = `
<FileSpreadsheet16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 26`] = `
<FileText16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 27`] = `
<FileThreeD16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 28`] = `
<FolderPersonal16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 29`] = `
<FileVector16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 30`] = `
<FileVideo16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 31`] = `
<FileWord16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 32`] = `
<FileZip16
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon-monotone/ItemIconMonotone render() should render default component 33`] = `
<FileDefault16
  height={32}
  width={32}
/>
`;
